test newThreadPerTaskExecutor